<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <artifactId>apphub-service-skyxplore</artifactId>
        <groupId>com.github.saphyra</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>

    <artifactId>apphub-service-skyxplore-game</artifactId>
    <version>1.0-SNAPSHOT</version>

    <name>apphub-service-skyxplore-game</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-skyxplore-lobby-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-web_socket</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.google.guava</groupId>
            <artifactId>guava</artifactId>
            <version>${versions.guava}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-concurrency</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-skyxplore-data</artifactId>
            <version>1.0-SNAPSHOT</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-skyxplore-game-server</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-geometry</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-data</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-api-skyxplore-data-client</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-test-api</artifactId>
            <version>${project.version}</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-event</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-request_validation</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${versions.spring-boot}</version>
        </dependency>

        <dependency>
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>${versions.gson}</version>
        </dependency>

        <dependency>
            <groupId>org.java-websocket</groupId>
            <artifactId>Java-WebSocket</artifactId>
            <version>${versions.java-websocket}</version>
        </dependency>

        <dependency>
            <groupId>com.github.saphyra</groupId>
            <artifactId>apphub-lib-skyxplore-ws</artifactId>
            <version>${project.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-pool2</artifactId>
            <version>${versions.apache-commons-pool}</version>
        </dependency>

        <dependency>
            <groupId>jakarta.xml.bind</groupId>
            <artifactId>jakarta.xml.bind-api</artifactId>
            <version>4.0.0</version>
        </dependency>

        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>${versions.jaxbApi}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${versions.spring-boot}</version>
                <configuration>
                    <finalName>application</finalName>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${versions.maven-compiler-plugin}</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>${versions.lombok}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-deploy-plugin</artifactId>
                <configuration>
                    <skip>true</skip>
                </configuration>
            </plugin>

            <!-- Docker image -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>exec-maven-plugin</artifactId>
                <version>${versions.exec-maven-plugin}</version>
                <executions>
                    <execution>
                        <id>docker-package</id>
                        <phase>install</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>docker</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>build</argument>
                                <argument>-f</argument>
                                <argument>Dockerfile</argument>
                                <argument>-t</argument>
                                <argument>saphyra/${project.artifactId}:latest</argument>
                                <argument>.</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>docker-tag</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>docker</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>tag</argument>
                                <argument>saphyra/${project.artifactId}:latest</argument>
                                <argument>saphyra/${project.artifactId}:release</argument>
                            </arguments>
                        </configuration>
                    </execution>
                    <execution>
                        <id>docker-push</id>
                        <phase>deploy</phase>
                        <goals>
                            <goal>exec</goal>
                        </goals>
                        <configuration>
                            <executable>docker</executable>
                            <workingDirectory>${project.basedir}</workingDirectory>
                            <arguments>
                                <argument>push</argument>
                                <argument>saphyra/${project.artifactId}:release</argument>
                            </arguments>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
